--- a/Server/package.json
+++ b/Server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "itsmagic",
+  "name": "masteglass",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
@@ -10,10 +10,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.1",
-    "itsmagic": "file:",
-    "play-sound": "^1.1.6",
-    "speaker": "^0.5.5",
     "ws": "^8.18.0"
   }
 }
